# bookstore

./: Dockerfile  pyproject.toml  requirements.txt  requirements2.txt
bookStore/: settings.py  urls.py
order/: factories.py
order/serializers/: order_serializer.py  read.me
order/tests/test_viewsets/: test__order_viewseet.py  test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: factories.py  urls.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
